--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Netpub">
     <meta name="keywords" content="marketing digital, stratégies créatives, transparence, résultats mesurables, Netpub, agence de marketing digital">
     <link rel="canonical" href="https://www.netpub.odoo.com/">
-
+    <meta name="google-site-verification" content="OcxJpQEKodsl3y1luEgVk7vFn3HiofOIs76QLYVRjkM" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     
